# course

./: .gitignore  CMakeLists.txt  README.md  course.sln
course/: course.vcxproj  course.vcxproj.filters  functions.c  functions.h  main.c
course/headers/: functions.h  logging.h  menu.h  models.h
course/src/: functions.c  logging.c  menu.c
